--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "tweepy>=4.12.1",
     "python-dotenv>=0.21.1",
     "termcolor>=2.2.0",
+    "pickledb>=0.9.2",
 ]
 requires-python = ">=3.10"
 license = {text = "MIT"}
